-----------------------------
 Change history for MATPOWER
-----------------------------

Version:    4.1

maintained by Ray Zimmerman <rz10@cornell.edu>

MATPOWER
$Id$
Copyright (c) 1996-2012 by Power System Engineering Research Center (PSERC)
See http://www.pserc.cornell.edu/matpower/ for more info.


Changes since 4.1
-----------------

4/30/12
    - Fixed a bug in int2ext() where converting a case to internal
      ordering before calling runpf() or runopf() could result in
      a fatal error due to mismatched number of columns in internal
      and external versions of data matrices. Thanks to Nasiruzzaman
      and Shiyang Li for reporting and detailing the issue.
    - Fixed fatal bug in MIPS for unconstrained, scalar problems.
      Thanks to Han Na Gwon. Bumped MIPS version to 1.0.1.

3/14/12
    - Fixed a bug in runpf() where it was using the wrong initial
      voltage magnitude for generator buses marked as PQ buses. Power
      flow of solved case was not converging in zero iterations as
      expected.

2/29/12
    - Added a tolerance for detecting violated Q limits in runpf()
      when ENFORCE_Q_LIMS is true. Suggested by Hongxing Ye.

1/31/12
    - Added utilities to help in working with networks with islands,
      find_islands(), extract_islands() and connected_components()
      and corresponding test file t/t_islands().

1/24/12
    - Added option to makeJac() to return full Jacobian instead of
      reduced version used in Newton power flow updates.

1/16/12
    - Added new function gurobiver() for retreiving/printing Gurobi
      and Gurobi_MEX version information, since it is used multiple
      places.

1/10/12
    - Moved the building of Ybus outside the reactive limit
      enforcement loop in runpf(). Suggested by Shiyang Li.

1/4/12
    - Running a power flow for a case with DC lines but no gencost
      no longer causes an error.


Changes since 4.0
-----------------

12/14/11
    - Released version 4.1.