@@ -15,6 +15,10 @@ See http://www.pserc.cornell.edu/matpower/ for more info.
 Changes since 4.1
 -----------------
 
+5/2/12
+    - In opf_setup(), take magnitude of initial voltages at generator
+      buses from bus matrix (VM), not gen matrix (VG).
+
 4/30/12
     - Fixed a bug in int2ext() where converting a case to internal
       ordering before calling runpf() or runopf() could result in
